fix whitespaces

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -176,7 +176,7 @@ pre {
   margin-bottom: 2rem;
   margin-top: 0;
   border-radius: 6px;
-
+  white-space: pre-wrap;
   // @media (max-width: $phone-max-width) {
   //   white-space: pre-wrap;
   //   word-wrap: break-word;
